--- a/README
+++ b/README
@@ -6,4 +6,4 @@ If you want to use the ogg files in newer systems, you can just download the one
 
 There are reports of my flashable zip not functioning correctly on the old targeted Samsung devices that were running on Andorid 6 & Android 7 on XDA. Changes were last made in 2018 and It was not tested by me as I no longer have the compatible device with me. I think it has to do with the old boolean scripts, not compatible with the new set of sounds ported from the S9 & S10 as I used the same script for S5, S6 & S7 on it. The system files were pretty much neck and neck to to the old pre-OneUI devices running TouchWiz & GraceUX TouchWiz.
 
-What I would recommed is if you want to use the sounds (except UI), then just download it and treat it like a normal audio file, or modify my outdated scripts, feel free to do whatever you want to it.
+What I would recommend is if you want to use the sounds (except UI), then just download it and treat it like a normal audio file, or modify my outdated scripts, feel free to do whatever you want to it.
