--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-NOT RECOMMENDED TO FLASH IT, BUT YOU CAN LOOK INTO THE ISSUE YOURSELF
-What this does is it replaces the existing ogg files with the new ones and it also adds new ogg files in to the system root.
+)NOT RECOMMENDED TO FLASH IT, BUT YOU CAN LOOK INTO THE ISSUE YOURSELF
+What this does is it replaces the existing ogg files with the new ones (from GS9 and it also adds new ogg files in to the system root.
 root/system/media/audio/(all the individual sound folders)
 
 If you want to use the ogg files in newer systems, you can just download the ones that you need and treat it like a typical audio file on your device.
