--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-)NOT RECOMMENDED TO FLASH IT, BUT YOU CAN LOOK INTO THE ISSUE YOURSELF
+NOT RECOMMENDED TO FLASH IT, BUT YOU CAN LOOK INTO THE ISSUE YOURSELF
 What this does is it replaces the existing ogg files with the new ones (from GS9 and it also adds new ogg files in to the system root.
 root/system/media/audio/(all the individual sound folders)
 
